@@ -19,13 +19,13 @@
  */
 package org.neo4j.cypher.internal.pipes.aggregation
 
-import collection.Map
 import org.neo4j.cypher.internal.commands.expressions.Expression
 import org.neo4j.cypher.internal.pipes.ExecutionContext
+import org.neo4j.cypher.internal.helpers.TypeSafeMathSupport
 
 class SumFunction(val value: Expression)
   extends AggregationFunction
-  with Plus
+  with TypeSafeMathSupport
   with NumericExpressionOnly {
 
   def name = "SUM"
